@@ -14,6 +14,7 @@ Bug fixes:
 	* Fix group separator problem in formulas (BUG 468098)
 	* Improve log scales (auto scaling and tick number)
 	* Improve auto scale (Issue #536)
+	* Fix limits when changing scale (Issue #446)
 	* Use system liborigin headers if linking against system liborigin (BUG 469367)
 	* Don't clear the undo history when saving the project (BUG 470727)
 	* Properly react on orientation changes in the worksheet properties explorer
